# removedirtvs

./: meson.build
src/: shared.cpp  shared.h
